@@ -22,6 +22,7 @@ fixed bugs:
 - fixed bug in heur_oneopt.c which forgot to check LP rows if local rows are present
 - fixed bug in SCIPsolveKnapsackExactly(), trying to allocate too much memory which led to an overflow and later to a
   segmentation fault
+- fixed bug in cons_xor.c which did not copy the artificial integer variable (used for the lp relaxation)
 
 performance improvements:
 - fixed performance issue in debug mode, where SCIPvarGetLPSol_rec() calculated a value to often, which in the end lead
